# paw

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  example.env  justfile  manage.py  pyproject.toml
.github/workflows/: build-and-test.yml  django-tests.yml  docker-image.yml
core/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_pawuser_use_darkmode.py  0003_googlessouser.py  0004_rename_user_googlessouser_paw_user.py  0005_remove_googlessouser_id_alter_googlessouser_paw_user.py  0006_mailtemplate.py  0007_seed_mailtemplates.py  0008_pawuser_receive_email_notifications.py
core/utils/: general.py  google_sso.py  initial_data.py
docs/: docker_compose_deployment.md
fbl_integration/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
fbl_integration/migrations/: 0001_initial.py
fbl_integration/templates/: complete_registration.html  fbl_auth_get_code.html  fbl_auth_start.html
paw/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
paw/locale/: .gitattributes
paw/static/: .gitattributes
paw/templates/: base.html  dashboard_base.html  placeholder.html
paw/templatetags/: context_processors.py  filters.py
static/css/: paw.css
static/js/: theme_switch.js
status/: admin.py  models.py  urls.py  views.py
status/migrations/: 0001_initial.py
theme/: package-lock.json  package.json  tailwind.config.js
ticketing/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
ticketing/migrations/: 0001_initial.py  0003_comment.py  (+12 more)
(+29 files in other folders)
