[tool.poetry]
name = "paw"
version = "0.1.0"
description = ""
authors = ["Alex Ottr <alex@otter.foo>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.3"
django-colorfield = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
