[tool.poetry]
name = "paw"
version = "0.5.12"
description = ""
authors = ["Alex Ottr <alex@otter.foo>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.3"
django-colorfield = "^0.11.0"
google-auth = "^2.28.2"
google-auth-oauthlib = "^1.2.0"
python-magic = "^0.4.27"
python-dotenv = "^1.0.1"
psycopg = {extras = ["binary"], version = "^3.1.18"}
gunicorn = "^21.2.0"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
